--- a/projects/python-gzipstream/html/gzipstream-module.html
+++ b/projects/python-gzipstream/html/gzipstream-module.html
@@ -81,7 +81,7 @@ XXX: Eventually, I wish to merge this with the gzip.GzipFile somehow and
 
 Author: Todd Warner &lt;taw@redhat.com&gt;
 Copyright (c) 2002-2010, Red Hat, Inc.
-Released under Python license and GPLv2 license
+Released under GPLv2 license
 
 </pre>
 
